Layout fixes
Address overflow in a few spots for horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ COMMON CLASSES
 	position: relative;
 	margin: 3em 0;
 	width: 100%;
-	padding: 110px 0 20px;
+	padding: 110px 0 20px 0;
 }
 
 .img_slide {
